--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "portfolio",
   "version": "0.1.0",
-  "author": "Matthew Favela",
   "private": true,
   "dependencies": {
     "@heroicons/react": "^2.0.18",
@@ -21,7 +20,7 @@
     "react-parallax-tilt": "^1.7.42",
     "react-pdf": "^5.7.1",
     "react-router-dom": "^6.2.2",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.1",
     "react-scroll": "^1.9.0",
     "react-tsparticles": "^1.42.2",
     "typewriter-effect": "^2.18.2",
